added movie collection
